# xent_solver

./: .gitignore  README.md  example.py  hacking_template.py  pyproject.toml
configs/gcg/: test.json
data/condense/: test.json
data/hacking/: targets.json  targets.py
outputs/hacking_results/: summary.json
src/: pipeline.py
src/data/: banned.py  constraints.py  loader.py
src/dsl/: __init__.py  initializer.py  masking.py  primitives.py  program.py  scorer.py  template.py
src/engine/: cache.py  config.py  optimizer.py  task.py
src/strategies/: base.py  gcg.py
src/utils/: args.py  batch.py  fabric.py  logging.py  model.py
