[project]
name = "solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "transformers>=5.0.0rc0",
    "torch>=2.1.0",
    "quanto>=0.2.0",
    "optimum-quanto>=0.2.7",
    "mlx-lm>=0.27.1; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "lightning>=2.5.5",
    "pytorch-lightning>=2.5.5",
    "transformer-engine>=2.7.0; platform_system != 'Darwin'",
    "asyncio>=4.0.0",
    "mistral-common>=1.8.6",
    "pandas>=2.3.3",
    "accelerate>=1.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pylint>=4.0.1",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow",
]
